RESOLVED FIXED283532
[Cleanup][content-visibility] shouldApply*Containment functions don't need to be on RenderElement
https://bugs.webkit.org/show_bug.cgi?id=283532
Summary [Cleanup][content-visibility] shouldApply*Containment functions don't need to...
alan
Reported 2024-11-21 16:37:46 PST
ssia
Attachments
Patch (13.41 KB, patch)
2024-11-21 16:46 PST, alan
no flags
Patch (13.41 KB, patch)
2024-11-22 07:32 PST, alan
no flags
[fast-cq]Patch (13.41 KB, patch)
2024-11-22 09:24 PST, alan
no flags
alan
Comment 1 2024-11-21 16:46:33 PST
Antti Koivisto
Comment 2 2024-11-22 06:27:13 PST
Comment on attachment 473323 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=473323&action=review > Source/WebCore/rendering/style/RenderStyle.h:2423 > +inline bool shouldApplyLayoutContainment(const RenderStyle&, const Element&); > +inline bool shouldApplySizeContainment(const RenderStyle&, const Element&); > +inline bool shouldApplyInlineSizeContainment(const RenderStyle&, const Element&); > +inline bool shouldApplyStyleContainment(const RenderStyle&, const Element&); > +inline bool shouldApplyPaintContainment(const RenderStyle&, const Element&); > +inline bool isSkippedContentRoot(const RenderStyle&, const Element&); not sure this stuff needs to be inline
alan
Comment 3 2024-11-22 07:32:21 PST
alan
Comment 4 2024-11-22 09:24:27 PST
Created attachment 473340 [details] [fast-cq]Patch
EWS
Comment 5 2024-11-22 13:52:45 PST
Committed 286982@main (f973d5474566): <https://commits.webkit.org/286982@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 473340 [details].
Radar WebKit Bug Importer
Comment 6 2024-11-22 13:53:14 PST
alan
Comment 7 2024-11-22 13:54:07 PST
(In reply to Antti Koivisto from comment #2) > Comment on attachment 473323 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=473323&action=review > > > Source/WebCore/rendering/style/RenderStyle.h:2423 > > +inline bool shouldApplyLayoutContainment(const RenderStyle&, const Element&); > > +inline bool shouldApplySizeContainment(const RenderStyle&, const Element&); > > +inline bool shouldApplyInlineSizeContainment(const RenderStyle&, const Element&); > > +inline bool shouldApplyStyleContainment(const RenderStyle&, const Element&); > > +inline bool shouldApplyPaintContainment(const RenderStyle&, const Element&); > > +inline bool isSkippedContentRoot(const RenderStyle&, const Element&); > > not sure this stuff needs to be inline oops, I missed this comment. will fix.
Note You need to log in before you can comment on or make changes to this bug.