[Cleanup][content-visibility] shouldApply*Containment functions don't need to be on RenderElement https://bugs.webkit.org/show_bug.cgi?id=283532

Reviewed by Antti Koivisto.

Now that we can tell if an element is replaced or not, we don't need a renderer
to figure out if containment applies or not.

This is in preparation for using size containment check in StyleAdjuster where _used_
content-visibility is set.

* Source/WebCore/rendering/RenderElementInlines.h:
(WebCore::RenderElement::shouldApplyLayoutContainment const):
(WebCore::RenderElement::shouldApplySizeContainment const):
(WebCore::RenderElement::shouldApplyInlineSizeContainment const):
(WebCore::RenderElement::shouldApplyStyleContainment const):
(WebCore::RenderElement::shouldApplyPaintContainment const):
(WebCore::isSkippedContentRoot):
* Source/WebCore/rendering/style/RenderStyle.h:
* Source/WebCore/rendering/style/RenderStyleInlines.h:
(WebCore::shouldApplyLayoutContainment):
(WebCore::shouldApplySizeContainment):
(WebCore::shouldApplyInlineSizeContainment):
(WebCore::shouldApplyStyleContainment):
(WebCore::shouldApplyPaintContainment):
(WebCore::isSkippedContentRoot):

Canonical link: https://commits.webkit.org/286982@main